--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "sequelize-cli": "^6.4.1"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "chai": "^4.3.6",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
