--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sequelize-cli": "^6.4.1"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "chai": "^4.3.6",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
