Modificado el package.json y git ignore

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "run-migration": "npx sequelize-cli db:migrate",
+    "run-seeders": "npx sequelize-cli db:seed:all"
   },
   "keywords": [],
   "author": "",
