--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
     "run-migration": "npx sequelize-cli db:migrate",
-    "run-seeders": "npx sequelize-cli db:seed:all"
+    "run-seeders": "npx sequelize-cli db:seed:all",
+    "test-mocha": "mocha --recursive --exit ./test"
 },
   "keywords": [],
   "author": "",
