--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "mocha --exit",
     "dev": "nodemon src/index.js",
     "run-migration": "npx sequelize-cli db:migrate",
